--- a/app/root/content/home-dna.html
+++ b/app/root/content/home-dna.html
@@ -10,7 +10,7 @@
 					></div>
 				</div>
 			</div>
-			<div class="column xs-col-11 lg-col-5 xl-col-5">
+			<div class="column xs-col-12 lg-col-7 xl-col-7">
 				<div class="section-cta__content-wrap">
 					<h2>UX-Design is in my DNA.</h2>
 					<div class="copy">
@@ -37,11 +37,11 @@
 							interfaces
 						</p>
 					</div>
-					<a
-						class="btn btn-primary button"
-						href="/people/erik-spiekermann/"
-						>see more from Markus</a
-					>
+					<div class="btn-cta">
+						<a class="" href="/people/erik-spiekermann/"
+							><span>see more from Markus</span></a
+						>
+					</div>
 				</div>
 			</div>
 		</div>
